# diffusion-policy-inference

./: .gitignore  README.md  can.sh  start_arx5.sh  start_camera.sh
follow1/dp/: eval_aloha.py  eval_real_robot.py  eval_real_ros copy.py  eval_real_ros.py
follow1/dp/codebase/diffusion_policy/diffusion_policy/config/: train_diffusion_unet_real_hybrid_workspace.yaml  train_diffusion_unet_real_image_workspace.yaml
follow1/dp/codebase/diffusion_policy/diffusion_policy/config/task/: pick_up_cube.yaml  pick_up_cube_120_160.yaml
follow1/dp/codebase/diffusion_policy/diffusion_policy/workspace/: train_diffusion_unet_image_workspace.py
follow1/dp/codebase/diffusion_policy/tests/: test_multi_realsense.py
follow1/dp/codebase_backup/diffusion_policy/diffusion_policy/config/: train_act_image_workspace.yaml  train_consistency_unet_hybrid_workspace.yaml  train_diffusion_distillation_unet_ddim_hybrid_workspace.yaml  train_diffusion_transformer_hybrid_workspace.yaml  train_diffusion_unet_hybrid_workspace.yaml  train_vae_with_ddpm_workspace.yaml
follow1/dp/codebase_backup/diffusion_policy/diffusion_policy/config/task/: folder.yaml  sustech_dish.yaml
follow1/dp/codebase_backup/diffusion_policy/diffusion_policy/dataset/: real_lift_image_dataset.py  sustech_image_dataset.py
follow1/dp/codebase_backup/diffusion_policy/diffusion_policy/model/ACT/: backbone.py  position_encoding.py
follow1/dp/codebase_backup/diffusion_policy/diffusion_policy/model/consistency/: karras_diffusion.py  scripts_util.py
follow1/dp/codebase_backup/diffusion_policy/diffusion_policy/model/diffusion/: progressive_distillation.py  train_ema_model.py  transformer_for_cvae.py
follow1/dp/codebase_backup/diffusion_policy/diffusion_policy/policy/: action_chunk_transformer_policy.py  consistency_unet_hybrid_image_policy.py  diffusion_distillation_unet_hybrid_image_policy.py  diffusion_transformer_hybrid_image_policy.py  diffusion_unet_hybrid_image_policy.py  diffusion_vae_hybrid_image_policy.py
follow1/dp/codebase_backup/diffusion_policy/diffusion_policy/workspace/: train_action_chunk_transformer_workspace.py  train_consistency_unet_hybrid_workspace.py  train_diffusion_distillation_unet_hybrid_workspace.py  train_diffusion_vae_hybrid_workspace.py  vae.py
follow1/dp/utils/: real_inference_utils.py
follow1/src/arm_control/: CMakeLists.txt
follow1/src/arm_control/cfg/: reconfig.cfg
follow1/src/arm_control/include/App/: arm_control.h  solve.h
follow1/src/arm_control/include/Hardware/: can.h  motor.h
follow1/src/arm_control/launch/: arx5.launch  arx5_pos.launch  camera.launch
follow1/src/arm_control/msg/: JointInformation.msg  PosCmd.msg
follow1/src/arm_control/scripts/: Subscriber.py  action_replay.py  back_to_origin.py  camera_calibration.py  left_image_publish.py  linear_interpolation.py  mid_image_publish.py  move.py  pos_publisher.py  publish_test.py  read.py  readp.py  right_image_publish.py  sample.py  shit_moutain.py  udp_video_stream_publisher.py  video_check.py
follow1/src/arm_control/src/: arx_5v.cpp  arx_5v_pos.cpp
follow1/src/arm_control/src/App/: arm_control.cpp
follow1/src/arm_control/src/Hardware/: motor.cpp
follow2/src/arm_control/: CMakeLists.txt
follow2/src/arm_control/cfg/: reconfig.cfg
follow2/src/arm_control/include/Hardware/: can.h
follow2/src/arm_control/launch/: arx5.launch
follow2/src/arm_control/models/: arx5h.urdf
follow2/src/arm_control/msg/: JointInformation.msg  PosCmd.msg
follow2/src/arm_control/src/: arx_5v.cpp
follow2/src/arm_control/src/App/: arm_control.cpp
follow2/src/arm_control/src/Hardware/: math_ops.cpp  teleop.cpp
wkj/: eval_real_ros.py
wkj/ros_real_world/: robot_ros_controller.py  ros_pose_util.py  umi_ros_env.py
